--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     ports:
       - "3003:3003"
     volumes:
-      - .:/app/croppix
+      - .:/app
     environment:
       - NODE_OPTIONS=--max-old-space-size=8192
+      - BASE_EXTERNAL_URL=https://ondang-media.s3.us-east-1.amazonaws.com
     entrypoint: tail -f /dev/null
