--- a/infra/node/dev/Dockerfile
+++ b/infra/node/dev/Dockerfile
@@ -1,7 +1,5 @@
 FROM node:20.18.0-bookworm-slim
 
-RUN corepack enable && corepack prepare yarn@4.5.1 --activate
-
 RUN apt-get update \
     && apt-get -y install \
         sudo \
@@ -14,4 +12,4 @@ RUN echo root:node | chpasswd \
 
 STOPSIGNAL SIGTERM
 EXPOSE 3003
-CMD ["node", "/app/croppix/src/app.js"]
+CMD ["node", "/app/src/app.js"]
