--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "GPL",
   "type": "module",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.779.0",
     "sharp": "^0.32.5",
     "smartcrop": "^2.0.5",
     "smartcrop-sharp": "^2.0.8"
