--- a/infra/node/dev/Dockerfile
+++ b/infra/node/dev/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20.18.0-bookworm-slim
+FROM node:22.14.0-bookworm-slim
 
 RUN apt-get update \
     && apt-get -y install \
@@ -6,10 +6,12 @@ RUN apt-get update \
         vim \
     && apt-get clean
 
+RUN corepack enable
+
 RUN echo root:node | chpasswd \
     && echo node:node | chpasswd \
     && usermod -aG sudo node
 
 STOPSIGNAL SIGTERM
 EXPOSE 3003
-CMD ["node", "/app/src/app.js"]
+CMD ["yarn", "start"]
