--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,4 @@ services:
       - "3003:3003"
     volumes:
       - .:/app
-    environment:
-      - NODE_OPTIONS=--max-old-space-size=8192
-      - AWS_REGION=
-      - AWS_ACCESS_KEY_ID=
-      - AWS_SECRET_ACCESS_KEY=
-      - AWS_BUCKET=
-      - AWS_BUCKET_CACHE=
-    entrypoint: tail -f /dev/null
+    env_file: .env
