--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "license": "GPL",
   "type": "module",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.779.0",
-    "sharp": "^0.32.5",
-    "smartcrop": "^2.0.5",
-    "smartcrop-sharp": "^2.0.8"
+    "@aws-sdk/client-rekognition": "^3.943.0",
+    "@aws-sdk/client-s3": "^3.943.0",
+    "sharp": "^0.34.5"
   },
   "scripts": {
     "dev": "node --watch src/app.js",
     "start": "node src/app.js"
   },
-  "packageManager": "yarn@4.5.1"
+  "packageManager": "yarn@4.12.0"
 }
