--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "croppix",
-  "version": "1.1.0",
-  "license": "GPL",
+  "version": "2.0.0-beta.1",
+  "license": "MIT",
   "type": "module",
   "dependencies": {
     "@aws-sdk/client-rekognition": "^3.943.0",
