--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "croppix",
-  "version": "2.0.0-beta.7",
+  "version": "2.0.0",
   "license": "MIT",
   "type": "module",
   "repository": {
